cmake_minimum_required(VERSION 3.28)
project(Cpp_Primer_5_ProblemSet_StudyNote)

set(CMAKE_CXX_STANDARD 11)

# 添加可执行文件
add_executable(main_program main.cpp)
# 第 2 章
add_executable(ex04 ch02_Variables_and_Basic_Types/ex04.cpp
)
add_executable(ex08 ch02_Variables_and_Basic_Types/ex08.cpp)
add_executable(ex18 ch02_Variables_and_Basic_Types/ex18.cpp)
add_executable(ex20 ch02_Variables_and_Basic_Types/ex20.cpp)
add_executable(ex25 ch02_Variables_and_Basic_Types/ex25.cpp)
add_executable(ex27 ch02_Variables_and_Basic_Types/ex27.cpp)
add_executable(ex34 ch02_Variables_and_Basic_Types/ex34.cpp)
add_executable(ex41_1 ch02_Variables_and_Basic_Types/ex41_1.cpp)
add_executable(ex41_2 ch02_Variables_and_Basic_Types/ex41_2.cpp)
add_executable(ex42_1 ch02_Variables_and_Basic_Types/ex42_1.cpp)
add_executable(ex42_2 ch02_Variables_and_Basic_Types/ex42_2.cpp)
